# tc-play

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  Makefile.classic  Makefile.old  README  README.md  crc32.c  crc32.h  crypto-dev.c  crypto-gcrypt.c  crypto.c  generic_xts.c  generic_xts.h  hdr.c  humanize.c  humanize.h  io.c  main.c  pbkdf2-gcrypt.c  pbkdf2-openssl.c  safe_mem.c  tc-play-api.c  tc-play-api.h  tc-play.c  tc-play.h  tcplay.3  tcplay.8  tcplay.c  tcplay.h  tcplay.map  tcplay_api.c  tcplay_api.h  tcplay_api_internal.h  tcplay_api_test.c
test/: Gemfile  Makefile  README  reduce_test_vol.sh
test/features/: api_hidden.feature  api_info.feature  create_vol_api.feature  create_vol_cli.feature  hidden.feature  migrate_vol_cli.feature  modify_vol_api.feature  modify_vol_cli.feature  passphrase_64_api.feature  passphrase_64_cli.feature  query_api.feature  restore_hdr_api.feature  restore_hdr_cli.feature  save_hdr_api.feature  save_hdr_cli.feature  veracrypt_cli.feature  veracrypt_create_cli.feature  vol_test1_api.feature  vol_test1_cli.feature  vol_test2_api.feature  vol_test2_cli.feature
test/features/step_definitions/: libtcplay_steps.rb  tcplay_steps.rb
test/features/support/: env.rb
test/keyfiles/: key.1  key.2
test/volumes/: test2.desc  test_long.tc  test_sha256.vc  test_sha512.vc  test_whirlpool.vc
